--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Index 2</h1>
-    <video src="http://localhost:8080/video" controls></video>
+    <video width="200" height="111" src="http://localhost:8080/video" controls></video>
 </body>
 </html>
